--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       - name: wirte ssh
         run: ls -a
       - name: run sh
-        run: ./script/getvars.sh 1 2 3 4
+        run: ./.github/script/getvars.sh 1 2 3 4
         shell: bash
       #   run: |
       #     mkdir ./ttdly
