--- a/.github/workflows/issue2md.yml
+++ b/.github/workflows/issue2md.yml
@@ -17,8 +17,7 @@ jobs:
         name: chechout
         uses: actions/checkout@v3.3.0
         with: 
-          refs: refs/heads/main
+          ref: main
       - if: ${{ github.actor != env.ONWER}}
         name: close&&lock
-        run: ./.github/script/issue-filter.sh ${{env.ONWER}} ${{env.REPO}} ${{github.event.issue.number}} ${{secrets.TOKEN}}
-        shell: bash
+        run: bash ./.github/script/issue-filter.sh ${{env.ONWER}} ${{env.REPO}} ${{github.event.issue.number}} ${{secrets.TOKEN}}
