--- a/.github/workflows/issue2md.yml
+++ b/.github/workflows/issue2md.yml
@@ -8,6 +8,7 @@ on:
 env:
   ONWER: "tTdly-Old"
   REPO: "ttdly-old.github.io"
+  EMAIL: tutoudenglongyu@163.com
 
 jobs:
   FilterIssues:
@@ -28,9 +29,13 @@ jobs:
           ref: issue2md
       - name: Run Issue to Md Script
         run: bash ./.github/script/issue2md.sh ${{ github.title }} ${{ github.body }} ${{ github.created_at }} ${{ github.number }}
-      - name: Commit and Push change
+      - name: Set Git Info
         run: |
-          git config --list
-          ls -a
+          git config user.name ${{ env.ONWER }}
+          git config user.email ${{ env.EMAIL }}
+      - name: Commit and push
+        run: |
+          git add . && git commit -m 'pages(create): pages/${{ github.number }}.md ${{ github.title }} ${{ github.created_at }} BY github actions'
+          git push  https://${{ env.ONWER }}:${{ secrets.TOKEN }}@github.com/${{ env.REPO }}.git issue2md
 
 
