--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,8 @@
 name: test
 
 on: pull_request
-
+env: 
+  EMAIL: 123@ee.com
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -10,24 +11,7 @@ jobs:
         uses: actions/checkout@v3.3.0
         with:
           ref: main
-      - name: find..
-        run: |
-          git config --list
-          ls -a
-      - name: chekout issue2md
-        uses: actions/checkout@v3.3.0
-        with:
-          ref: issue2md
-      - name: find..
-        run: |
-          git config --list
-          ls -a
-      - name: chekout gh-pages
-        uses: actions/checkout@v3.3.0
-        with:
-          ref: gh-pages
-      - name: find..
-        run: |
-          git config --list
-          ls -a
-      
+      - run: |
+        git config user.name "${{github.actor}}"
+        git config user.email "${{env.EMAIL}}"
+        git config --list
