--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,6 @@ jobs:
           git config user.email "${{env.EMAIL}}"
           git config --list
       - run: |
-          bash ./.github/scripts/issue2md.sh ${{github.actor}} ${{env.EMAIL}} 3 ${{env.EMAIL}}
+          bash ./.github/script/issue2md.sh ${{github.actor}} ${{env.EMAIL}} 3 ${{env.EMAIL}}
           ls -a
           cat ./pages/${{env.EMAIL}}.md
