--- a/.github/workflows/issue2md.yml
+++ b/.github/workflows/issue2md.yml
@@ -10,8 +10,13 @@ env:
   REPO: "ttdly-old.github.io"
   EMAIL: tutoudenglongyu@163.com
 
+permissions:
+  pull-requests: write
+  issues: write
+  repository-projects: write  
+
 jobs:
-  FilterIssues:
+  issue2md:
     runs-on: ubuntu-latest
     steps:
       - if: ${{ github.actor != env.ONWER}}
@@ -28,15 +33,14 @@ jobs:
         with:
           ref: issue2md
       - name: Run Issue to Md Script
-        run: bash ./.github/script/issue2md.sh ${{github.event.title}} ${{github.event.body}} ${{github.event.created_at}} ${{github.event.issue.number}}
+        run: bash ./.github/script/issue2md.sh ${{github.event.issue.title}} ${{github.event.issue.body}} ${{github.event.issue.created_at}} ${{github.event.issue.number}}
       - name: Set Git Info
         run: |
           git config user.name ${{env.ONWER}}
           git config user.email ${{env.EMAIL}}
       - name: Commit and push
         run: |
-          echo ${{toJSON(github)}}
-          # git add . && git commit -m 'pages(create): pages/${{github.event.number}}.md  ${{github.event.title}}  ${{github.event.created_at}}BY github actions'
-          # git push  https://${{env.ONWER}}:${{secrets.TOKEN}}@github.com/${{env.ONWER}}/${{env.REPO}}.git issue2md
+          git add . && git commit -m 'pages(create): pages/${{github.event.issue.number}}.md  ${{github.event.issue.title}}  ${{github.event.issue.created_at}}BY github actions'
+          git push  https://${{env.ONWER}}:${{secrets.TOKEN}}@github.com/${{env.ONWER}}/${{env.REPO}}.git issue2md
 
 
