--- a/.github/workflows/issue2md.yml
+++ b/.github/workflows/issue2md.yml
@@ -10,7 +10,7 @@ env:
   REPO: "ttdly-old.github.io"
   EMAIL: tutoudenglongyu@163.com
 
-permissions: read-all|write-all
+permissions: write-all
 
 jobs:
   issue2md:
