--- a/.github/workflows/issue2md.yml
+++ b/.github/workflows/issue2md.yml
@@ -1,4 +1,3 @@
-# name: Fliter bad issue and trans issue info to md file
 name: issue2md
 
 on:
@@ -17,13 +16,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - if: ${{ github.actor != env.ONWER}}
-        name: Checkout Main
-        uses: actions/checkout@v3.3.0
-        with: 
-          ref: main
-      - if: ${{ github.actor != env.ONWER}}
-        name: Comment Close and Lock Issue
-        run: bash ./.github/script/issue-filter.sh ${{env.ONWER}} ${{env.REPO}} ${{github.event.issue.number}} ${{secrets.TOKEN}}
+        name: Comment Close and Lock Issues
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.TOKEN}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{env.REPO}}/${{env.ONWER}}/issues/${{github.event.issue.number}}/comments \
+            -d '{"body":"Sorry, I don'\''t accept other people'\''s issues now. So the issue was automatically closed and locked. Thanks and good luck."}'
+          curl -L \
+            -X PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.TOKEN}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{env.REPO}}/${{env.ONWER}}/issues/${{github.event.issue.number}} \
+            -d '{"state":"close","state_reason":"not_planned"}'
+          curl -L \
+            -X PUT \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.TOKEN}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{env.REPO}}/${{env.ONWER}}/issues/${{github.event.issue.number}}/lock \
+            -d '{"lock_reason":"off-topic"}'
       - if: ${{ github.actor == env.ONWER}}
         name: Checkout issue2md
         uses: actions/checkout@v3.3.0
@@ -43,29 +58,3 @@ jobs:
         with: 
           branch: issue2md
           github_token: ${{secrets.GITHUB_TOKEN}}
-# - name: Set Git Info
-#   run: |
-#     git config user.name ${{env.ONWER}}
-#     git config user.email ${{env.EMAIL}}
-# - name: Commit and push
-#   run: |
-#     git add . && git commit -m 'pages(create): pages/${{github.event.issue.number}}.md  ${{github.event.issue.title}}  ${{github.event.issue.created_at}}BY github actions'
-#     git push  https://${{env.ONWER}}:${{secrets.TOKEN}}@github.com/${{env.ONWER}}/${{env.REPO}}.git issue2md
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v3
-#       with:
-#         ref: ${{ github.head_ref }}
-#         fetch-depth: 0
-#     - name: Commit files
-#       run: |
-#         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-#         git config --local user.name "github-actions[bot]"
-#         git commit -a -m "Add changes"
-#     - name: Push changes
-#       uses: ad-m/github-push-action@master
-#       with:
-#         force_with_lease: true
