--- a/.github/workflows/issue2md.yml
+++ b/.github/workflows/issue2md.yml
@@ -39,23 +39,28 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{env.ONWER}}/${{env.REPO}}/issues/${{github.event.issue.number}}/lock \
             -d '{"lock_reason":"off-topic"}'
+
       - if: ${{ github.actor == env.ONWER}}
         name: Checkout issue2md
         uses: actions/checkout@v3.3.0
         with:
           ref: issue2md
           fetch-depth: 0
+
       - if: ${{ github.actor == env.ONWER}}
         name: Run Issue to Md Script
         run: bash ./.github/script/issue2md.sh ${{env.ONWER}} ${{env.REPO}} ${{github.event.issue.number}} ${{secrets.TOKEN}}
+
       - if: ${{ github.actor == env.ONWER}}
         name: Commit files
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "pages(create): pages/${{github.event.issue.number}}.md"
-      - name: Push changes
+          git commit -m "pages(create): pages/posts/${{github.event.issue.number}}.md"
+
+      - if: ${{ github.actor == env.ONWER}}
+        name: Push changes
         uses: ad-m/github-push-action@master
         with: 
           branch: issue2md
