--- a/.github/workflows/md2page.yml
+++ b/.github/workflows/md2page.yml
@@ -43,6 +43,10 @@ jobs:
 
     - name: Build
       run: pnpm run build
+    
+    - name: Show directory
+      run: |
+        ls -A
 
     - name: Checkout gh-pages
       uses: actions/checkout@v3.3.0
@@ -52,6 +56,7 @@ jobs:
 
     - name: Copy files
       run: |
+        ls -A
         rm -rf ./dist/assets
         mv -f ./dist/* ./
 
