--- a/.github/workflows/issue2page.yml
+++ b/.github/workflows/issue2page.yml
@@ -14,7 +14,7 @@ permissions: write-all
 jobs:
   lockissue:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != env.ONWER}}
+    if: ${{ github.actor != 'tTdly-Old' }}
     steps: 
       - name: Comment Close and Lock Issues
         run: |
@@ -41,7 +41,7 @@ jobs:
             -d '{"lock_reason":"off-topic"}'
     issue2page:
       runs-on: ubuntu-latest
-      if: ${{ github.actor == env.ONWER}}
+      if: ${{ github.actor == 'tTdly-Old' }}
       steps:
         - name: Checkout issue2md
           uses: actions/checkout@v3.3.0
