--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,11 @@ env:
 jobs:
   testt:
     runs-on: ubuntu-latest
-    if:  github.actor != 'tTdly-Old'
+    if:  github.actor != vars.ONWER
     steps:
       - run: echo "ERROR"
   test2:
     runs-on: ubuntu-latest
-    if:  github.actor == 'tTdly-Old'
+    if:  github.actor == vars.ONWER
     steps:
       - run: echo "TRUE"
