--- a/.github/workflows/issue2page.yml
+++ b/.github/workflows/issue2page.yml
@@ -1,9 +1,10 @@
 name: issue2page
 
-on:
-  issues:
-    types:
-      - "opened"
+# on:
+#   issues:
+#     types:
+#       - "opened"
+on: pull_request
 env:
   ONWER: "tTdly-Old"
   REPO: "ttdly-old.github.io"
@@ -23,21 +24,21 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.TOKEN}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{env.ONWER}}/${{env.REPO}}/issues/${{github.event.issue.number}}/comments \
+            https://api.github.com/repos/${{github.repository}}/issues/${{github.event.issue.number}}/comments \
             -d '{"body":"Sorry, I don'\''t accept other people'\''s issues now. So the issue was automatically closed and locked. Thanks and good luck."}'
           curl -L \
             -X PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.TOKEN}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{env.ONWER}}/${{env.REPO}}/issues/${{github.event.issue.number}} \
+            https://api.github.com/repos/${{github.repository}}/issues/${{github.event.issue.number}} \
             -d '{"state":"close","state_reason":"not_planned"}'
           curl -L \
             -X PUT \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.TOKEN}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{env.ONWER}}/${{env.REPO}}/issues/${{github.event.issue.number}}/lock \
+            https://api.github.com/repos/${{github.repository}}/issues/${{github.event.issue.number}}/lock \
             -d '{"lock_reason":"off-topic"}'
   issue2page:
     runs-on: ubuntu-latest
