--- a/.github/workflows/issue2page.yml
+++ b/.github/workflows/issue2page.yml
@@ -1,10 +1,10 @@
 name: issue2page
 
-# on:
-#   issues:
-#     types:
-#       - "opened"
-on: pull_request
+on:
+  issues:
+    types:
+      - "opened"
+
 env:
   ONWER: "tTdly-Old"
   REPO: "ttdly-old.github.io"
@@ -51,7 +51,7 @@ jobs:
           fetch-depth: 0
 
       - name: Run Issue to Md Script
-        run: bash ./.github/script/issue2md.sh ${{env.ONWER}} ${{env.REPO}} ${{github.event.issue.number}} ${{secrets.TOKEN}}
+        run: bash ./.github/script/issue2md.sh ${{github.repository}} ${{github.event.issue.number}} ${{secrets.GITHUB_TOKEN}}
 
       - if: ${{ github.actor == env.ONWER}}
         name: Commit files
