--- a/.github/workflows/discussions.yml
+++ b/.github/workflows/discussions.yml
@@ -15,4 +15,6 @@ jobs:
   testt:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{toJSON(github)}}
+      - uses: tTdly-Old/hello-world-javascript-action@main
+        with:
+          who-to-greet: 'Mona the Octocat'
