--- a/.github/workflows/discussions.yml
+++ b/.github/workflows/discussions.yml
@@ -15,6 +15,4 @@ jobs:
   testt:
     runs-on: ubuntu-latest
     steps:
-      - uses: tTdly-Old/hello-world-javascript-action@main
-        with:
-          who-to-greet: 'Mona the Octocat'
+      - uses: ttdly/poke@main
