--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,18 @@
 name: test
-
 on:
-  push:
+  workflow_call:
+      inputs:
+        build_id:
+          required: true
+          type: number
+        deploy_target:
+          required: true
+          type: string
+        perform_deploy:
+          required: true
+          type: boolean
 
-env:
-  T: "tTdly-Old"
-  F: "ttdly"
+
 
 jobs:
   testt:
