--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,13 @@
 name: test
 on:
-  workflow_call:
-      inputs:
-        build_id:
-          required: true
-          type: number
-        deploy_target:
-          required: true
-          type: string
-        perform_deploy:
-          required: true
-          type: boolean
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 
 
 
